--- a/app/elements/coder/team/edit-team-modal.html
+++ b/app/elements/coder/team/edit-team-modal.html
@@ -7,9 +7,6 @@
 <link rel="import" href="../../../bower_components/paper-toast/paper-toast.html">
 <link rel="import" href="../../../bower_components/iron-form/iron-form.html">
 
-<link rel="import" href="../../common/coduno-iron-ajax.html">
-<link rel="import" href="../../common/error/errors-display.html">
-
 <dom-module id="edit-team-modal">
 	<style include="iron-flex">
 		.fieldList {
@@ -40,7 +37,7 @@
 			</div>
 			<div class="buttons">
 				<paper-button class="secondary" dialog-dismiss>Cancel</paper-button>
-				<paper-button on-click="_save" class="primary" dialog-confirm disabled="{{saveDisabled}}">Save</paper-button>
+				<paper-button on-click="_save" class="primary" disabled="{{saveDisabled}}">Save</paper-button>
 			</div>
 		</paper-dialog>
 		<paper-toast id="toast" text="{{toastText}}"></paper-toast>
@@ -81,6 +78,7 @@
 				this.saveDisabled = !this.$.form.validate() || (this.team.name === this.updatedTeam.name && this.team.canonicalName === this.updatedTeam.canonicalName);
 			},
 			_onResponse: function(){
+				this.$.dialog.close();
 				this.toastText = 'Team successfully update.';
 				this.$.toast.show();
 				this.fire('team-created');
