--- a/app/elements/coder/code-editor/consoles/tabbed-console.html
+++ b/app/elements/coder/code-editor/consoles/tabbed-console.html
@@ -4,8 +4,6 @@
 <link rel="import" href="../../../../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../../../../bower_components/paper-toast/paper-toast.html">
 
-<link rel="import" href="../../../common/data-providers/test/tests-by-task-provider.html">
-
 <dom-module id="tabbed-console">
 	<style include="iron-flex">
 		:host{
@@ -30,8 +28,7 @@
 	</style>
 	<template>
 		<tests-by-task-provider
-			id="testsProvider"
-			task="{{task}}"
+			task-id="[[task.id]]"
 			data="{{tests}}"
 			error="{{error}}"
 			on-request-failed="onTestsError">
