--- a/app/elements/coder/team/create-team-modal.html
+++ b/app/elements/coder/team/create-team-modal.html
@@ -7,9 +7,6 @@
 <link rel="import" href="../../../bower_components/paper-toast/paper-toast.html">
 <link rel="import" href="../../../bower_components/iron-form/iron-form.html">
 
-<link rel="import" href="../../common/error/errors-display.html">
-<link rel="import" href="../../common/coduno-iron-ajax.html">
-
 <dom-module id="create-team-modal">
 	<style include="iron-flex">
 		.fieldList {
@@ -23,7 +20,7 @@
 		<coduno-iron-ajax
 			id="createTeamRequest"
 			method="POST"
-			body="{{team}}"
+			body="[[team]]"
 			path="/teams"
 			error="{{error}}"
 			on-request-finished="_onResponse">
