--- a/app/elements/common/data-providers/test/tests-by-task-provider.html
+++ b/app/elements/common/data-providers/test/tests-by-task-provider.html
@@ -9,7 +9,6 @@
 			id="request"
 			auto
 			method="GET"
-			url="[[baseUrl]]/tasks/[[task.id]]/tests"
 			handle-as="json"
 			with-credentials="true"
 			bubbles>
@@ -21,7 +20,13 @@
 			is: 'tests-by-task-provider',
 			behaviors: [
 				Behaviors.Providers.General
-			]
+			],
+			observers: [
+				'_urlChanged(baseUrl, taskId)'
+			],
+			_urlChanged: function(){
+				this.$.request.url= this.baseUrl + '/tasks/' + this.taskId + ' /tests';
+			}
 		});
 	</script>
 </dom-module>
