--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -112,6 +112,8 @@
 <link rel="import" href="common/login/login-page-password/login-page-password.html">
 <link rel="import" href="common/login/login-page-u2f/login-page-u2f.html">
 
+<link rel="import" href="common/location/location-finder.html">
+
 <link rel="import" href="common/markdown/render-markdown.html">
 
 <link rel="import" href="common/register/register-page.html">
