--- a/app/elements/common/login/login-page-password/login-page-password.html
+++ b/app/elements/common/login/login-page-password/login-page-password.html
@@ -8,37 +8,12 @@
 
 <dom-module id="login-page-password">
 	<style type="text/css" include="iron-flex">
-iron-icon.huge {
-	--iron-icon-height: 50%;
-	--iron-icon-width: 50%;
+:host {
+	/* layout properties for the host element */
+	display: block;
+	height: calc(100% + 56px);
 }
-
-paper-material {
-	width: 70%;
-	background-color: white;
-
-	/* three times the width of iron-icon.huge */
-	max-width: 432px;
-
-	/* places this in the middle */
-	margin: auto;
-}
-
-paper-material > div {
-	padding: 24px;
-}
-
-paper-material > div:first-child {
-	height: 15%;
-	max-height: 248px;
-	padding: 10%;
-	padding-bottom: 0;
-
-	@apply(--layout-horizontal);
-	@apply(--layout-center);
-}
-
-paper-material > div.email {
+div.email {
 	height: auto;
 	padding: 0;
 	padding-bottom: 5%;
@@ -47,26 +22,8 @@ paper-material > div.email {
 	@apply(--layout-center);
 }
 
-paper-material > div:first-child > div {
-	width: 100%;
 
-	@apply(--layout-vertical);
-	@apply(--layout-center);
-}
-
-
-paper-material > div:first-child > div > img {
-	width: auto;
-	height: auto;
-	max-height: 50%;
-	max-width: 50%;
-}
-
-paper-material > div:nth-child(2) {
-	text-align: center;
-}
-
-paper-material > div.email > div {
+div.email > div {
 	width: 100%;
 	align: center;
 	font-size: 120%;
@@ -75,36 +32,29 @@ paper-material > div.email > div {
 	@apply(--layout-center);
 }
 
-paper-material > div > paper-button {
+paper-button {
 	width: 100%;
 
 	margin: 0 !important;
 	margin-top: 12px !important;
 }
-paper-icon-button {
-	left: 10px;
-	margin-left: -24px;
-	padding: 0;
+
+paper-input {
+	margin: 1px;
 }
 	</style>
 	<template>
-		<paper-material elevation="1">
-			<div>
-				<paper-icon-button flat icon="chevron-left" on-click="prev"></paper-icon-button>
-				<div>
-					<img src="/images/logo.svg" />
-				</div>
-			</div>
+		<base-wizard show-back-button="true" on-back="prev">
 			<div class="email">
 				<div>
 					<p>Welcome, <span>{{email}}</span>!</p>
 				</div>
 			</div>
 			<div>
-				<paper-input id="passwordInput" type="password" label="Password" value="{{password}}" autofocus="true" on-keydown="onKeydown"></paper-input>
+				<paper-input id="passwordInput" type="password" label="Password" value="{{password}}" on-keydown="onKeydown"></paper-input>
 				<paper-button flat colorful on-click="next">Next</paper-button>
 			</div>
-		</paper-material>
+		</base-wizard>
 	</template>
 </dom-module>
 <script>
