--- a/app/elements/coder/challenge/register-wizard/challenge-register-wizard.html
+++ b/app/elements/coder/challenge/register-wizard/challenge-register-wizard.html
@@ -1,11 +1,14 @@
 <link rel="import" href="../../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="../../../../bower_components/neon-animation/neon-animation.html">
+<link rel="import" href="../../../../bower_components/neon-animation/neon-animations.html">
 <link rel="import" href="../../../../bower_components/neon-animation/neon-animated-pages.html">
+<link rel="import" href="../../../../bower_components/neon-animation/neon-animatable.html">
 
 <dom-module id="challenge-register-wizard">
 	<style include="iron-flex">
 		:host{
 			display: block;
+			height: 100%;
 		}
 		.horizontal-layout {
 			@apply(--layout-horizontal);
@@ -18,9 +21,34 @@
 		.icon-text {
 			padding: 0 32px 0px 4px;
 		}
+		#steps {
+			background: white;
+			height: 30px;
+			margin: 16px auto;
+			padding: 24px;
+			text-align: center;
+			width: calc(70% - 48px);
+		}
+		neon-animated-pages {
+			height: calc(100% - 96px);
+		}
+		#steps-title {
+			padding: 0;
+			margin: 0;
+		}
+		#stepElements {
+			@apply(--layout-horizontal);
+		}
+		challenge-info-step {
+			position: fixed;
+			margin: 16px 0px;
+			height: calc(100% - 82px);
+		}
 	</style>
 	<template>
 		<challenge-by-canonical-name-provider canonical-name="[[canonicalName]]" data="{{challenge}}"></challenge-by-canonical-name-provider>
+		<challenge-register-wizard-nav show-nav="[[showNav]]" first-step-state="[[firstStepState]]"
+		second-step-state="[[secondStepState]]"></challenge-register-wizard-nav>
 		<neon-animated-pages id="pages" class="flex" selected="[[selected]]" entry-animation="[[entryAnimation]]" exit-animation="[[exitAnimation]]">
 			<challenge-info-step challenge="[[challenge]]"></challenge-info-step>
 			<register-page context="[[context]]" on-redirect-login="_login"></register-page>
@@ -39,7 +67,8 @@
 			properties: {
 				selected: {
 					type: Number,
-					value: 0
+					value: 0,
+					observer: 'updateNavElements'
 				},
 				context: {
 					value: 'challenge-register'
@@ -51,6 +80,10 @@
 				'neon-animation-finish': '_afterNeon',
 				'next-step': 'next',
 				'prev-step': 'prev'
+			},
+			ready: function(){
+				this.entryAnimation = 'slide-from-right-animation';
+				this.exitAnimation = 'slide-left-animation';
 			},
 			prev: function() {
 				if(this.selected === 0){
@@ -84,6 +117,22 @@
 				this.entryAnimation = 'slide-from-left-animation';
 				this.exitAnimation = 'slide-right-animation';
 				this.selected = 1;
+			},
+			updateNavElements: function(){
+				if(this.selected === 0){
+					this.showNav = false;
+					return
+				}
+				this.showNav = true;
+				if(this.selected === pageUserRegister || this.selected === pageLogin){
+					this.firstStepState = 'current';
+					this.secondStepState = 'default';
+					this.thirdStepState = 'default';
+				}else if (this.selected === pageChallengeRegister){
+					this.firstStepState = 'completed';
+					this.secondStepState = 'current';
+					this.thirdStepState = 'default';
+				}
 			}
 		});
 	</script>
