--- a/app/elements/common/login/login-page-email/login-page-email.html
+++ b/app/elements/common/login/login-page-email/login-page-email.html
@@ -21,6 +21,26 @@ paper-button {
 	margin-top: 12px !important;
 }
 
+.google, .facebook, .github, .linkedin {
+	color: #ffffff;
+}
+
+.google {
+	background-color: #DD4B39;
+}
+
+.facebook {
+	background-color: #3B5998;
+}
+
+.github {
+	background-color: #444444;
+}
+
+.linkedin {
+	background-color: #007BB6;
+}
+
 #signupWrapper {
 	@apply(--layout-horizontal);
 }
@@ -34,6 +54,26 @@ span {
 			<div>
 				<paper-input type="text" label="Username or e-mail" value="{{email}}" autofocus="[[!externalWidget]]" on-keydown="onKeydown"></paper-input>
 				<paper-button class$="{{empty}}" flat colorful on-change="checkEmpty" on-click="next">Next</paper-button>
+			</div>
+			<div id="socialSignInWrapper">
+				<span></span>
+				<form id="form-google" method="POST" action="[[_build('/auth/google')]]">
+					<input name="scope" value="profile email" type="hidden">
+					<paper-button raised on-click="_submit" provider="google" class="google">Login with Google</paper-button>
+				</form>
+				<form id="form-github" method="POST" action="[[_build('/auth/github')]]"  >
+					<input name="scope" value="user:email" type="hidden">
+					<paper-button raised on-click="_submit" provider="github" class="github">Login with GitHub</paper-button>
+				</form>
+				<form id="form-facebook" method="POST" action="[[_build('/auth/facebook')]]">
+					<input name="scope" value="email" type="hidden">
+					<paper-button raised on-click="_submit" provider="facebook" class="facebook">Login with Facebook</paper-button>
+				</form>
+				<form id="form-linkedin" method="POST" action="[[_build('/auth/linkedin')]]">
+					<input name="scope" value="r_basicprofile r_emailaddress" type="hidden">
+					<paper-button raised on-click="_submit" provider="linkedin" class="linkedin">Login with LinkedIn</paper-button>
+				</form>
+				<span></span>
 			</div>
 			<div id="signupWrapper">
 				<span></span>
@@ -91,6 +131,12 @@ Polymer({
 		if (e.keyCode === 13) {
 			this.fire('next');
 		}
+	},
+	_build: function(url) {
+		return util.build(url);
+	},
+	_submit: function(e) {
+		document.getElementById('form-' + e.target.getAttribute('provider')).submit();
 	}
 });
 </script>
