fix styling for error display component

--- a/app/elements/coder/team/delete-team-modal.html
+++ b/app/elements/coder/team/delete-team-modal.html
@@ -20,22 +20,21 @@
 		<coduno-iron-ajax
 			id="deleteTeamRequest"
 			method="DELETE"
-			path="/team/[[team.canonicalName]]"
+			path="/teams/[[team.canonicalName]]"
 			on-request-finished="_onResponse"
-			error="{{error}}"
-			on-error="_onError">
+			error="{{error}}">
 		</coduno-iron-ajax>
 		<paper-dialog id="inviteDialog" modal>
-			<errors-display error="{{error}}"></errors-display>
 			<h4>Are you sure?</h4>
 			<p><b>This action cannot be undone.</b> It will permanently delete the /t/[[team.canonicalName]] team.</p>
 			<p>Please type the name of the team to continue</p>
 			<div class="fieldList">
+				<errors-display error="{{error}}"></errors-display>
 				<paper-input autofocus="true" label="Team name" value="{{teamName}}"></paper-input>
 			</div>
 			<div class="buttons">
 				<paper-button class="secondary" dialog-dismiss>Cancel</paper-button>
-				<paper-button on-click="_deleteTeam" class="error" dialog-confirm disabled="{{deleteDisabled}}">Delete</paper-button>
+				<paper-button on-click="_deleteTeam" class="error" disabled="{{deleteDisabled}}">Delete</paper-button>
 			</div>
 		</paper-dialog>
 		<paper-toast id="toast" text="{{toastText}}"></paper-toast>
@@ -61,13 +60,13 @@
 					return;
 				}
 				this.$.deleteTeamRequest.generateRequest();
-				this.team = {};
 			},
 			_nameChanged: function(){
 				this.deleteDisabled = this.team.name !== this.teamName;
 			},
 			_onResponse: function(e){
 				e.stopEventPropagation();
+				this.team = {};
 				this.toastText = 'Team successfully deleted.';
 				this.$.toast.show();
 				this.fire('team-deleted');
